@@ -1,6 +1,10 @@
 1.1.0-dev (Next Release)
 ------------------------
 
+- The restriction that cached items must be strings has been removed.
+  Any type that can be marshalled by XML-RPC is now allowed.  Thanks
+  to Brad Kreider for the initial patch.
+
 1.0.0 (2014-02-02)
 ------------------
 
